[package]
name = "oraiswap-balance-processor"
version = "1.0.0"
authors = ["Oraichain Labs"]
edition = "2021"
description = "A Oraiswap pair contract"
license = "LICENSE"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2 = { version = "=1.0.1" }
cw20 = { version = "=1.0.1" }
cw20-base = { version = "=1.0.1" }
cosmwasm-std = { version = "=1.1.9" }
cw-storage-plus = { version = "=1.0.1" }
integer-sqrt = "=0.1.5"
thiserror = { version = "1.0.26" }
cosmwasm-schema = "1.1.9"
oraiswap = { version = "1.0.1" }
protobuf = { version = "=3.2.0" }
cw-controllers = "1.0.1"

[dev-dependencies]
cosmwasm-storage = { version = "1.1.9" }
